2010-04-10 Stephan Kleine

	* CMakeLists.txt: Add support for out-of-source builds.

	* src/CMakeLists.txt: Add support for out-of-source builds.

2010-04-06  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/oap.xsl (html-feed-form): Display feed version.

2010-04-01  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/about.htm4: Make sure that supporters are in
	alphabetical order.

2010-04-01  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/omp.xsl (nvt): Display NVT tags if they are set.

2010-03-30  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (xsl_transform_omp): Add TIME to ENVELOPE.

	* src/gsad_oap.c (xsl_transform_oap): Add TIME to ENVELOPE.

	* src/html/src/gsad.xsl (html-gsa-logo): Add time under logout.
	(time): New template.
	(envelope): Pass time to html-gsa-logo.

2010-03-30  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad.c (exec_omp_get): Add NULL guard for duration.

2010-03-29  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (get_schedules_omp, create_schedule_omp)
	(delete_schedule_omp): Add TIME to GET_SCHEDULES.

	* src/html/src/omp.xsl (opt): New template.
	(html-create-schedule-form): Create first time input via "opt" so that
	currect time is selected.

2010-03-29  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (edit_task): New function.  Body from edit_task_omp.  Add
	extra_xml arg.
	(edit_task_omp): Call through to edit_task.
	(save_task_omp): For comment or name error, put up the parameter error
	message on the edit_task page.

2010-03-29  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-edit-task-form): Make escalator editable.

	* src/gsad.c (init_validator): Add rule "escalator_id".
	(exec_omp_get): Pass escalator to save_task_omp.

	* src/gsad_omp.h: Update header accordingly.

	* src/gsad_omp.c (save_task_omp): Add schedule_id arg.  Include in
	MODIFY_TASK command.
