@@ -43,17 +43,16 @@ exec_program (libopenvas-config
 ## Libraries
 
 add_library (gsad_base STATIC gsad_base.c)
+set_target_properties (gsad_base PROPERTIES COMPILE_FLAGS "${OPENVAS_CFLAGS}")
 target_link_libraries (gsad_base ${LIBS_LIBRARIES})
 
 add_library (gsad_omp STATIC gsad_omp.c)
 set_target_properties (gsad_omp PROPERTIES COMPILE_FLAGS "${OPENVAS_CFLAGS}")
-target_link_libraries (gsad_omp ${LIBS_LIBRARIES})
-set_target_properties (gsad_omp PROPERTIES COMPILE_FLAGS "${OPENVAS_CFLAGS}")
+target_link_libraries (gsad_omp ${LIBS_LIBRARIES} openvas_omp)
 
 add_library (gsad_oap STATIC gsad_oap.c)
-set_target_properties (gsad_base PROPERTIES COMPILE_FLAGS "${OPENVAS_CFLAGS}")
-target_link_libraries (gsad_oap ${LIBS_LIBRARIES})
 set_target_properties (gsad_oap PROPERTIES COMPILE_FLAGS "${OPENVAS_CFLAGS}")
+target_link_libraries (gsad_oap ${LIBS_LIBRARIES})
 
 ## Program
 
